--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "product_store",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./backend/server.js",
   "scripts": {
     "start": "cross-env NODE_ENV=production  node ./backend/server.js",
     "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
