--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "product_store",
   "version": "1.0.0",
   "description": "",
-  "main": "./backend/server.js",
+  "main": "./Backend/server.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production  node ./backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "dev": "cross-env NODE_ENV=development  nodemon ./backend/server.js"
+    "start": "cross-env NODE_ENV=production  node ./Backend/server.js",
+    "build": "npm install && npm install --prefix Frontend && npm run build --prefix Frontend",
+    "dev": "cross-env NODE_ENV=development  nodemon ./Backend/server.js"
   },
   "keywords": [],
   "author": "",
